welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: ':' expected but identifier found.
def move( int nbPas t ,  Boolean versLavant) =  {
              ^Program:18: error: identifier expected but '}' found.
}
^